<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example.shelldemo</groupId>
  <artifactId>shdemmo</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Shell Demo Parent</name>
  <description>Oracle Database Utilities with Spring Shell Interface - Parent POM</description>
  <url>https://github.com/yourusername/shdemmo</url>

  <modules>
    <module>app</module>
    <module>database-login-validation-tool</module>
    <module>create-distribution</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    
    <!-- Dependency versions -->
    <picocli.version>4.7.7</picocli.version>
    <oracle.version>23.7.0.25.01</oracle.version>
    <junit.version>5.12.2</junit.version>
    <junit-platform.version>1.12.2</junit-platform.version>
    <jackson.version>2.18.0</jackson.version>
    <log4j2.version>2.24.3</log4j2.version>
    <disruptor.version>4.0.0</disruptor.version>
    <properties.plugin.version>1.1.0</properties.plugin.version>
    <versions.plugin.version>2.16.0</versions.plugin.version>
    <log4j2.transformer.version>2.15</log4j2.transformer.version>
    
    <!-- Plugin versions -->
    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
    <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
    <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
    <maven.shade.plugin.version>3.5.1</maven.shade.plugin.version>
    <maven.exec.plugin.version>3.2.0</maven.exec.plugin.version>
    
    <!-- OS properties -->
    <os.unix>true</os.unix>
    <os.windows>true</os.windows>
    <skip.bundle.creation>true</skip.bundle.creation>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Oracle JDBC Driver -->
      <dependency>
        <groupId>com.oracle.database.jdbc</groupId>
        <artifactId>ojdbc11</artifactId>
        <version>${oracle.version}</version>
      </dependency>

      <!-- Logging with Log4j2 -->
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-api</artifactId>
        <version>${log4j2.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>${log4j2.version}</version>
      </dependency>
      <!-- LMAX Disruptor for Log4j2 Async Logging -->
      <dependency>
        <groupId>com.lmax</groupId>
        <artifactId>disruptor</artifactId>
        <version>${disruptor.version}</version>
      </dependency>

      <!-- Command Line Interface -->
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli</artifactId>
        <version>${picocli.version}</version>
      </dependency>

      <!-- YAML Support -->
      <dependency>
        <groupId>com.fasterxml.jackson.dataformat</groupId>
        <artifactId>jackson-dataformat-yaml</artifactId>
        <version>${jackson.version}</version>
      </dependency>

      <!-- Object Mapping and Configuration Processing -->
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      
      <!-- JUnit Dependencies -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.platform</groupId>
        <artifactId>junit-platform-launcher</artifactId>
        <version>${junit-platform.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <!-- Compiles Java source code and processes annotations -->
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
        </plugin>
        
        <!-- Runs unit tests -->
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
          <configuration>
            <forkCount>0</forkCount>
            <reuseForks>false</reuseForks>
          </configuration>
        </plugin>

        <!-- Creates JAR file -->
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven.jar.plugin.version}</version>
        </plugin>

        <!-- Creates shaded/uber JAR -->
        <plugin>
          <artifactId>maven-shade-plugin</artifactId>
          <version>${maven.shade.plugin.version}</version>
        </plugin>

        <!-- Executes Java programs -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${maven.exec.plugin.version}</version>
        </plugin>

        <!-- Properties plugin -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>properties-maven-plugin</artifactId>
          <version>${properties.plugin.version}</version>
        </plugin>

        <!-- Versions plugin -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${versions.plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>